FractalParser.cpp

// Generated from Fractal.g4 by ANTLR 4.7.1


#include "FractalVisitor.h"

#include "FractalParser.h"


using namespace antlrcpp;
using namespace antlr4;

FractalParser::FractalParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FractalParser::~FractalParser() {
  delete _interpreter;
}

std::string FractalParser::getGrammarFileName() const {
  return "Fractal.g4";
}

const std::vector<std::string>& FractalParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FractalParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ScriptContext ------------------------------------------------------------------

FractalParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FractalParser::CommandContext *> FractalParser::ScriptContext::command() {
  return getRuleContexts<FractalParser::CommandContext>();
}

FractalParser::CommandContext* FractalParser::ScriptContext::command(size_t i) {
  return getRuleContext<FractalParser::CommandContext>(i);
}


size_t FractalParser::ScriptContext::getRuleIndex() const {
  return FractalParser::RuleScript;
}

antlrcpp::Any FractalParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::ScriptContext* FractalParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, FractalParser::RuleScript);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(40);
      command();
      setState(41);
      match(FractalParser::T__0);
      setState(45); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FractalParser::T__1)
      | (1ULL << FractalParser::T__3)
      | (1ULL << FractalParser::T__4)
      | (1ULL << FractalParser::T__5)
      | (1ULL << FractalParser::T__7)
      | (1ULL << FractalParser::T__8)
      | (1ULL << FractalParser::T__17)
      | (1ULL << FractalParser::T__20)
      | (1ULL << FractalParser::T__23)
      | (1ULL << FractalParser::T__36)
      | (1ULL << FractalParser::ITERATE))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

FractalParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t FractalParser::CommandContext::getRuleIndex() const {
  return FractalParser::RuleCommand;
}

void FractalParser::CommandContext::copyFrom(CommandContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BLOCK_COMContext ------------------------------------------------------------------

std::vector<FractalParser::CommandContext *> FractalParser::BLOCK_COMContext::command() {
  return getRuleContexts<FractalParser::CommandContext>();
}

FractalParser::CommandContext* FractalParser::BLOCK_COMContext::command(size_t i) {
  return getRuleContext<FractalParser::CommandContext>(i);
}

FractalParser::BLOCK_COMContext::BLOCK_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::BLOCK_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitBLOCK_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DYN_COMContext ------------------------------------------------------------------

FractalParser::CommandContext* FractalParser::DYN_COMContext::command() {
  return getRuleContext<FractalParser::CommandContext>(0);
}

FractalParser::DYN_COMContext::DYN_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::DYN_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitDYN_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SET_TO_COMContext ------------------------------------------------------------------

FractalParser::VariableContext* FractalParser::SET_TO_COMContext::variable() {
  return getRuleContext<FractalParser::VariableContext>(0);
}

FractalParser::ExpressionContext* FractalParser::SET_TO_COMContext::expression() {
  return getRuleContext<FractalParser::ExpressionContext>(0);
}

FractalParser::SET_TO_COMContext::SET_TO_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::SET_TO_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitSET_TO_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DEFAULT_TO_COMContext ------------------------------------------------------------------

FractalParser::VariableContext* FractalParser::DEFAULT_TO_COMContext::variable() {
  return getRuleContext<FractalParser::VariableContext>(0);
}

FractalParser::ExpressionContext* FractalParser::DEFAULT_TO_COMContext::expression() {
  return getRuleContext<FractalParser::ExpressionContext>(0);
}

FractalParser::DEFAULT_TO_COMContext::DEFAULT_TO_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::DEFAULT_TO_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitDEFAULT_TO_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- COLOR_COMContext ------------------------------------------------------------------

FractalParser::Color_commandContext* FractalParser::COLOR_COMContext::color_command() {
  return getRuleContext<FractalParser::Color_commandContext>(0);
}

FractalParser::COLOR_COMContext::COLOR_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::COLOR_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitCOLOR_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IF_THEN_COMContext ------------------------------------------------------------------

FractalParser::If_thenContext* FractalParser::IF_THEN_COMContext::if_then() {
  return getRuleContext<FractalParser::If_thenContext>(0);
}

FractalParser::IF_THEN_COMContext::IF_THEN_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::IF_THEN_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitIF_THEN_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PAR_COMContext ------------------------------------------------------------------

FractalParser::CommandContext* FractalParser::PAR_COMContext::command() {
  return getRuleContext<FractalParser::CommandContext>(0);
}

FractalParser::PAR_COMContext::PAR_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::PAR_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitPAR_COM(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LOOP_COMContext ------------------------------------------------------------------

FractalParser::LoopContext* FractalParser::LOOP_COMContext::loop() {
  return getRuleContext<FractalParser::LoopContext>(0);
}

FractalParser::LOOP_COMContext::LOOP_COMContext(CommandContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FractalParser::LOOP_COMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitLOOP_COM(this);
  else
    return visitor->visitChildren(this);
}
FractalParser::CommandContext* FractalParser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 2, FractalParser::RuleCommand);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FractalParser::T__1: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::SET_TO_COMContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(47);
        match(FractalParser::T__1);
        setState(48);
        variable();
        setState(49);
        match(FractalParser::T__2);
        setState(50);
        expression(0);
        break;
      }

      case FractalParser::T__3: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::DEFAULT_TO_COMContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(52);
        match(FractalParser::T__3);
        setState(53);
        variable();
        setState(54);
        match(FractalParser::T__2);
        setState(55);
        expression(0);
        break;
      }

      case FractalParser::T__4:
      case FractalParser::T__5: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::BLOCK_COMContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(57);
        _la = _input->LA(1);
        if (!(_la == FractalParser::T__4

        || _la == FractalParser::T__5)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(59); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(58);
          command();
          setState(61); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << FractalParser::T__1)
          | (1ULL << FractalParser::T__3)
          | (1ULL << FractalParser::T__4)
          | (1ULL << FractalParser::T__5)
          | (1ULL << FractalParser::T__7)
          | (1ULL << FractalParser::T__8)
          | (1ULL << FractalParser::T__17)
          | (1ULL << FractalParser::T__20)
          | (1ULL << FractalParser::T__23)
          | (1ULL << FractalParser::T__36)
          | (1ULL << FractalParser::ITERATE))) != 0));
        setState(63);
        match(FractalParser::T__6);
        break;
      }

      case FractalParser::T__36: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::COLOR_COMContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(65);
        color_command();
        break;
      }

      case FractalParser::T__7: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::PAR_COMContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(66);
        match(FractalParser::T__7);
        setState(67);
        command();
        break;
      }

      case FractalParser::T__8: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::DYN_COMContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(68);
        match(FractalParser::T__8);
        setState(69);
        command();
        break;
      }

      case FractalParser::T__17: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::IF_THEN_COMContext>(_localctx));
        enterOuterAlt(_localctx, 7);
        setState(70);
        if_then();
        break;
      }

      case FractalParser::T__20:
      case FractalParser::T__23:
      case FractalParser::ITERATE: {
        _localctx = dynamic_cast<CommandContext *>(_tracker.createInstance<FractalParser::LOOP_COMContext>(_localctx));
        enterOuterAlt(_localctx, 8);
        setState(71);
        loop();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NContext ------------------------------------------------------------------

FractalParser::NContext::NContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::NContext::POS_INT() {
  return getToken(FractalParser::POS_INT, 0);
}


size_t FractalParser::NContext::getRuleIndex() const {
  return FractalParser::RuleN;
}

antlrcpp::Any FractalParser::NContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitN(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::NContext* FractalParser::n() {
  NContext *_localctx = _tracker.createInstance<NContext>(_ctx, getState());
  enterRule(_localctx, 4, FractalParser::RuleN);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(FractalParser::POS_INT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

FractalParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FractalParser::Cpx_number_reContext* FractalParser::ConstantContext::cpx_number_re() {
  return getRuleContext<FractalParser::Cpx_number_reContext>(0);
}

FractalParser::Cpx_number_imContext* FractalParser::ConstantContext::cpx_number_im() {
  return getRuleContext<FractalParser::Cpx_number_imContext>(0);
}

FractalParser::NContext* FractalParser::ConstantContext::n() {
  return getRuleContext<FractalParser::NContext>(0);
}


size_t FractalParser::ConstantContext::getRuleIndex() const {
  return FractalParser::RuleConstant;
}

antlrcpp::Any FractalParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::ConstantContext* FractalParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 6, FractalParser::RuleConstant);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FractalParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        cpx_number_re();
        break;
      }

      case FractalParser::CPX_NUMBER_IM: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        cpx_number_im();
        break;
      }

      case FractalParser::POS_INT: {
        enterOuterAlt(_localctx, 3);
        setState(78);
        n();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

FractalParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::VariableContext::VARIABLE() {
  return getToken(FractalParser::VARIABLE, 0);
}


size_t FractalParser::VariableContext::getRuleIndex() const {
  return FractalParser::RuleVariable;
}

antlrcpp::Any FractalParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::VariableContext* FractalParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 8, FractalParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(FractalParser::VARIABLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Cpx_number_reContext ------------------------------------------------------------------

FractalParser::Cpx_number_reContext::Cpx_number_reContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::Cpx_number_reContext::NUMBER() {
  return getToken(FractalParser::NUMBER, 0);
}


size_t FractalParser::Cpx_number_reContext::getRuleIndex() const {
  return FractalParser::RuleCpx_number_re;
}

antlrcpp::Any FractalParser::Cpx_number_reContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitCpx_number_re(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::Cpx_number_reContext* FractalParser::cpx_number_re() {
  Cpx_number_reContext *_localctx = _tracker.createInstance<Cpx_number_reContext>(_ctx, getState());
  enterRule(_localctx, 10, FractalParser::RuleCpx_number_re);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(FractalParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Cpx_number_imContext ------------------------------------------------------------------

FractalParser::Cpx_number_imContext::Cpx_number_imContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::Cpx_number_imContext::CPX_NUMBER_IM() {
  return getToken(FractalParser::CPX_NUMBER_IM, 0);
}


size_t FractalParser::Cpx_number_imContext::getRuleIndex() const {
  return FractalParser::RuleCpx_number_im;
}

antlrcpp::Any FractalParser::Cpx_number_imContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitCpx_number_im(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::Cpx_number_imContext* FractalParser::cpx_number_im() {
  Cpx_number_imContext *_localctx = _tracker.createInstance<Cpx_number_imContext>(_ctx, getState());
  enterRule(_localctx, 12, FractalParser::RuleCpx_number_im);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(FractalParser::CPX_NUMBER_IM);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomContext ------------------------------------------------------------------

FractalParser::AtomContext::AtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FractalParser::ConstantContext* FractalParser::AtomContext::constant() {
  return getRuleContext<FractalParser::ConstantContext>(0);
}

FractalParser::VariableContext* FractalParser::AtomContext::variable() {
  return getRuleContext<FractalParser::VariableContext>(0);
}


size_t FractalParser::AtomContext::getRuleIndex() const {
  return FractalParser::RuleAtom;
}

antlrcpp::Any FractalParser::AtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitAtom(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::AtomContext* FractalParser::atom() {
  AtomContext *_localctx = _tracker.createInstance<AtomContext>(_ctx, getState());
  enterRule(_localctx, 14, FractalParser::RuleAtom);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FractalParser::POS_INT:
      case FractalParser::NUMBER:
      case FractalParser::CPX_NUMBER_IM: {
        enterOuterAlt(_localctx, 1);
        setState(87);
        constant();
        break;
      }

      case FractalParser::VARIABLE: {
        enterOuterAlt(_localctx, 2);
        setState(88);
        variable();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Cpx_functionContext ------------------------------------------------------------------

FractalParser::Cpx_functionContext::Cpx_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::Cpx_functionContext::EXP() {
  return getToken(FractalParser::EXP, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::COS() {
  return getToken(FractalParser::COS, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::SIN() {
  return getToken(FractalParser::SIN, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::TAN() {
  return getToken(FractalParser::TAN, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::COSH() {
  return getToken(FractalParser::COSH, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::SINH() {
  return getToken(FractalParser::SINH, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::TANH() {
  return getToken(FractalParser::TANH, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::RE() {
  return getToken(FractalParser::RE, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::IM() {
  return getToken(FractalParser::IM, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::BAR() {
  return getToken(FractalParser::BAR, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::ARG() {
  return getToken(FractalParser::ARG, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::LOG() {
  return getToken(FractalParser::LOG, 0);
}

tree::TerminalNode* FractalParser::Cpx_functionContext::SQRT() {
  return getToken(FractalParser::SQRT, 0);
}


size_t FractalParser::Cpx_functionContext::getRuleIndex() const {
  return FractalParser::RuleCpx_function;
}

antlrcpp::Any FractalParser::Cpx_functionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitCpx_function(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::Cpx_functionContext* FractalParser::cpx_function() {
  Cpx_functionContext *_localctx = _tracker.createInstance<Cpx_functionContext>(_ctx, getState());
  enterRule(_localctx, 16, FractalParser::RuleCpx_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    _la = _input->LA(1);
    if (!(((((_la - 52) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 52)) & ((1ULL << (FractalParser::EXP - 52))
      | (1ULL << (FractalParser::COS - 52))
      | (1ULL << (FractalParser::SIN - 52))
      | (1ULL << (FractalParser::TAN - 52))
      | (1ULL << (FractalParser::COSH - 52))
      | (1ULL << (FractalParser::SINH - 52))
      | (1ULL << (FractalParser::TANH - 52))
      | (1ULL << (FractalParser::RE - 52))
      | (1ULL << (FractalParser::IM - 52))
      | (1ULL << (FractalParser::BAR - 52))
      | (1ULL << (FractalParser::ARG - 52))
      | (1ULL << (FractalParser::LOG - 52))
      | (1ULL << (FractalParser::SQRT - 52)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Real_functionContext ------------------------------------------------------------------

FractalParser::Real_functionContext::Real_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FractalParser::Real_functionContext::ARCCOS() {
  return getToken(FractalParser::ARCCOS, 0);
}

tree::TerminalNode* FractalParser::Real_functionContext::ARCSIN() {
  return getToken(FractalParser::ARCSIN, 0);
}

tree::TerminalNode* FractalParser::Real_functionContext::ARCTAN() {
  return getToken(FractalParser::ARCTAN, 0);
}


size_t FractalParser::Real_functionContext::getRuleIndex() const {
  return FractalParser::RuleReal_function;
}

antlrcpp::Any FractalParser::Real_functionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FractalVisitor*>(visitor))
    return parserVisitor->visitReal_function(this);
  else
    return visitor->visitChildren(this);
}

FractalParser::Real_functionContext* FractalParser::real_function() {
  Real_functionContext *_localctx = _tracker.createInstance<Real_functionContext>(_ctx, getState());
  enterRule(_localctx, 18, FractalParser::RuleReal_function);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    _la = _input->LA(1);
    if (!(((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (FractalParser::ARCCOS - 65))
      | (1ULL << (FractalParser::ARCSIN - 65))
      | (1ULL << (FractalParser::ARCTAN - 65)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

FractalParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t FractalParser::ExpressionContext::getRuleIndex() const {
  return FractalParser::RuleExpression;
}

void FractalParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- POW_EXPContext ------------------------------------------------------------------
